feat: add product detail component, configure api url

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <a routerLink="/" matTooltip="Open main page" class="home-link">E-shop (andreygp5) last task (test invalidation)</a>
+  <a routerLink="/" matTooltip="Open main page" class="home-link">E-shop (andreygp5)</a>
 
   <div class="d-flex flex-fill"></div>
 
