feat(products): connect with the new backend implementation

--- a/src/app/admin/edit-product/edit-product.component.html
+++ b/src/app/admin/edit-product/edit-product.component.html
@@ -31,6 +31,35 @@
         </mat-form-field>
       </div>
 
+      <div class="col-12">
+        <ng-container formArrayName="images">
+          <ng-container
+            *ngFor="
+              let image of imagesCtrl.controls;
+              let i = index;
+              let first = first
+            "
+          >
+            <mat-form-field class="w-100">
+              <mat-label>Image</mat-label>
+              <input matInput [formControl]="$any(image)" />
+              <button
+                mat-button
+                matSuffix
+                color="warn"
+                (click)="removeImage(i)"
+                *ngIf="!first"
+              >
+                Remove
+              </button>
+            </mat-form-field>
+          </ng-container>
+        </ng-container>
+        <button mat-flat-button color="primary" (click)="addImage()">
+          Add image
+        </button>
+      </div>
+
       <div class="col col-md-6">
         <mat-form-field class="w-100">
           <mat-label>Price ($)</mat-label>
