--- a/src/app/products/product-item/product-item.component.html
+++ b/src/app/products/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <div mat-card-image class="img-container" (click)="goToProduct()">
     <div class="img-container__inner">
-      <img [src]="product.metadata.imagesSrc[0]" alt="" />
+      <img [src]="product.images[0]" alt="" />
     </div>
   </div>
 
